--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -115,9 +115,10 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: package
-          path: bld/lib/.libs/cygcurl-4.dll
-          path: /bld/src/.libs/curl.exe
-          path: bld/src/curl.exe
+          path: |
+            bld/lib/.libs/cygcurl-4.dll
+            bld/src/.libs/curl.exe
+            bld/src/curl.exe
 
       - name: 'autotools build tests'
         if: ${{ matrix.build == 'automake' && matrix.tflags != 'skipall' }}
