Add libraries to build artifacts

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -786,6 +786,8 @@ jobs:
         with:
           name: package
           path: |
+            bld/lib/*
+            bld/lib/*.*
             bld/src/curl.exe
 
       - name: 'cmake build tests'
