--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -782,6 +782,7 @@ jobs:
           fi
 
       - name: 'Upload Windows executable'
+        if ${{ matrix.plat == 'windows' && matrix.name == 'openssl' }}
         uses: actions/upload-artifact@v4
         with:
           name: package
